--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
               }
             ],
             "styles": [
+				"src/theme-colors.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -91,6 +92,7 @@
               }
             ],
             "styles": [
+				"src/theme-colors.scss",
               "src/styles.scss"
             ],
             "scripts": []
